[package]
name = "stipestream"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/PrinceDale99/StripeSpend"
homepage = "https://PrinceDale99.github.io/StripeSpend/"

[dependencies]
soroban-sdk = "20.0.0"



[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs" # <-- Add th

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
